--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="col-md-12 col-sm-12 col-xs-12 col-md-offset-0 col-sm-offset-0 col-xs-offset-0">
                         <h3>To play you have to download:</h3>
                         <p>
-                            <span>The computer application (<a href="http://www.lechantducygne.com/botanicumprocessore/binaries/BotanicumProcessore-win.zip">Windows</a>, <a href="http://www.lechantducygne.com/botanicumprocessore/binaries/BotanicumProcessore-linux.zip">Linux</a>, <a href="http://www.lechantducygne.com/botanicumprocessore/binaries/BotanicumProcessore-osx.zip">OS/X</a>) for creating the garden and the <a href="https://play.google.com/store/apps/details?id=com.LeChantDuCygne.BotanicumProcessore" target="_blank">Android app</a> needed to walk around the sound garden created for the Square Émile Chautemps in Paris: </span>
+                            <span>The computer application (<a href="http://www.lechantducygne.com/botanicumprocessore/binaries/BotanicumProcessore-win.zip">Windows</a>, <a href="http://www.lechantducygne.com/botanicumprocessore/binaries/BotanicumProcessore-linux.zip">Linux</a>, <a href="http://www.lechantducygne.com/botanicumprocessore/binaries/BotanicumProcessore-osx.zip">OS/X</a>) for creating the garden and the <a href="https://play.google.com/store/apps/details?id=com.LeChantDuCygne.BotanicumProcessore" target="_blank">Android app</a> required to walk around the sound garden created for the square Émile Chautemps in Paris. </span>
                         </p>
                     </div>
                 </div>
