--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Indie game developer doing a PhD. Member of the independent game collective Le Chant du Cygne.">
-        <meta name="author" content="Simon Chauvin">
+        <meta name="description" content="Sound walk at Émile Chautemps square garden in front of La Gaïté Lyrique, Paris.">
+        <meta name="author" content="Le Chant du Cygne">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="icon" href="favicon.ico">
